environments/kc-dev/services/ibm-mq/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibmmq
  labels:
    name: ibmmq
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ibmmq
  template:
    metadata:
      labels:
        name: ibmmq
    spec:
      containers:
      - name: ibmmq
        image: quay.io/ibmcase/ibm-mqadvanced-server-dev:9.2.4.0-amd64
        ports:
        - containerPort: 1414
        - containerPort: 9443
        - containerPort: 5672
