environments/kc-dev/services/ibm-mq/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kc-mq-ibm-mq
  namespace: kc-dev
spec:
  selector:
    app.kubernetes.io/name: kc-mq-ibm-mq
  ports:
    - name: mq
      protocol: TCP
      port: 1414
      targetPort: 1414
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
