environments/kc-dev/services/ibm-mq/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/eda-kc-order-mq-ui.git
  labels:
    app.kubernetes.io/name: kc-mq-ibm-mq
  name: kc-mq-ibm-mq
  namespace: kc-dev
spec:
  host: ""
  path: /
  port:
    targetPort: https
  to:
    kind: Service
    name: kc-mq-ibm-mq
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
